--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "main": "server.js",
-    "repository": {}
+    "repository": {},
     "engines": {
         "node": "8.x"
     }
